--- a/Todo/Todo.csproj
+++ b/Todo/Todo.csproj
@@ -6,4 +6,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Data.Sqlite" Version="8.0.0" />
+    <PackageReference Include="SQLite" Version="3.12.3" />
+  </ItemGroup>
+
 </Project>
